# MusicChatBot

./: main.py  pyproject.toml  ui.py
src/: agent.py  config.py  genius.py  wikipedia.py
src/tools/: genius.py
