[project]
name = "musicchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.0.4",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-groq>=0.3.4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "wikipedia>=1.4.0",
]

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["F401", "F841", "F403", "F405"]
